Project3/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    display: flex;
    font-family: 'Play', sans-serif;
}

.main-container{
    display: flex;
    flex-direction: row;
    position:absolute;
    top:0px;
    right:0px;
    bottom:0px;
    left:0px;
}

.left-container{
    background-image: url("images/bg-main-desktop.png");
    background-repeat: no-repeat;
    width: 50%;
    height: 100%;
}

.right-container{
    background-color: white;
}

.card1 {
    background-image: url("images/bg-card-front.png");
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 5px;
    margin-top: 100px;
    height: 300px;
    width: 499px;
    margin-left: 100px;
    margin-bottom: 20px;
    color: white;
}

.card1 img{
    margin-left: 20px;
    margin-top: 20px;
}

/* display of the card number */
.card-number {
    display: flex;
    justify-content: center;
    margin-top: 125px;
}

/* cardholder's info at the bottom of the card */
.bottom-of-card {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 10px;
}

.card2 {
    background-image: url("images/bg-card-back.png");
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 5px;
    height: 300px;
    width: 499px;
    margin-left: 300px;
}

/* the form */
.form {
    background-color: aqua;
    margin-top: 150px;
    margin-left: 100px;
    min-height: 400px;
    width: 499px;
    display: flex;
    padding: 50px;
}

.form small {
    /*visibility: hidden;*/
}
.form input{
    display: block;
}

.cardinput {
    height: 30px;
    width: 300px;
    border-radius: 5px;
}

/* styling for the labels for expiration and CVC */
.labels-expiration-cvc {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

/* input fields for the expiration dates & CVC */
.inputs-expiration-cvc {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.cardmonth, .cardyear {
    height: 30px;
    width: 70px;
    border-radius: 5px;
}

.cardcvc {
    height: 30px;
    width: 120px;
    border-radius: 5px;
}

/* margins & paddings for error messages */
.inputs, .inputs-expiration-cvc {
    margin-bottom: 5px;
    padding-bottom: 5px;
}

/* success messages */
.inputs small, .expiration-cvc small{
    visibility: hidden;
}

.inputs.success input {
    border: green solid 2px;
}

/* error messages */
.inputs.error input {
    border: red solid 2px;
}

.inputs.error small{
    visibility: visible;
    color: red;
}

/* styling for the submit button */
button {
    color: white;
    background-color: black;
    width: 100%;
    border: 2px solid black;
    padding: 10px;
    border-radius: 5px;
    display: block;
    font-size: 18px;
}

